--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/META-INF/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019.kotlin_module
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/article.xlsx
+
+.idea/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019.iml
