--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/META-INF/13_Adomaviciu
 out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/article.xlsx
 
 .idea/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019.iml
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/application/application.css
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/config.properties
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/article.txt
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/article.xls
