--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,2 +1,10 @@
-#Wed Dec 04 22:10:18 CET 2019
+#Thu Dec 05 10:14:55 CET 2019
+DiscountGroupPercent=null
 Strategy=EXCEL
+ExpensiveActive=false
+DiscountGroup=false
+ExpensivePercent=null
+DiscountGroupGroup=null
+ThresholdActive=false
+ThresholdAmount=null
+ThresholdPercent=null
