--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,10 +1,10 @@
-#Thu Dec 05 10:50:25 CET 2019
-DiscountGroupPercent=null
+#Thu Dec 05 13:05:10 CET 2019
+DiscountGroupPercent=6%
 Strategy=EXCEL
 ExpensiveActive=false
-DiscountGroup=false
+DiscountGroup=true
 ExpensivePercent=null
-DiscountGroupGroup=null
+DiscountGroupGroup=Group 1
 ThresholdActive=false
 ThresholdAmount=null
 ThresholdPercent=null
