--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,8 +1,8 @@
-#Thu Dec 05 14:06:41 CET 2019
+#Thu Dec 05 15:01:45 CET 2019
 DiscountGroupGroup=null
 DiscountGroupPercent=null
 ThresholdAmount=null
 ThresholdPercent=null
-ExpensivePercent=null
+ExpensivePercent=10%
 Strategy=EXCEL
-DiscountActive=[]
+DiscountActive=[EXPENSIVE]
