story9 first part

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/config.properties
 out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/article.txt
 
 out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/article.xls
+
+out/production/13_Adomavicius_Backx_Vlaeyen_Kassa_OOO2019/Files/config.properties
+
+src/Files/article.xls
