--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,8 +1,8 @@
-#Thu Dec 05 15:01:45 CET 2019
+#Fri Dec 06 13:30:01 CET 2019
 DiscountGroupGroup=null
 DiscountGroupPercent=null
 ThresholdAmount=null
 ThresholdPercent=null
-ExpensivePercent=10%
+ExpensivePercent=null
+DiscountActive=[]
 Strategy=EXCEL
-DiscountActive=[EXPENSIVE]
