--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,8 +1,8 @@
-#Fri Dec 06 13:30:01 CET 2019
-DiscountGroupGroup=null
-DiscountGroupPercent=null
+#Thu Dec 12 13:13:13 CET 2019
+DiscountGroupGroup=Group 1
+DiscountGroupPercent=10%
 ThresholdAmount=null
 ThresholdPercent=null
-ExpensivePercent=null
-DiscountActive=[]
+ExpensivePercent=10%
 Strategy=EXCEL
+DiscountActive=[GROUP, EXPENSIVE]
