Decorator for the receipt yes yes still have to do settings pane yeet dab UwU xd

--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -6,3 +6,5 @@ ThresholdPercent=null
 ExpensivePercent=null
 DiscountActive=[]
 Strategy=EXCEL
+ReceiptHeaderMessage=Welcome to the candy shop
+ReceiptFooterMessage=Please come again!
