--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,10 +1,11 @@
-#Fri Dec 06 13:30:01 CET 2019
-DiscountGroupGroup=null
+#Sat Dec 14 13:34:23 CET 2019
+ReceiptActive=[]
 DiscountGroupPercent=null
+Strategy=EXCEL
+ReceiptFooterMessage=null
+ReceiptHeaderMessage=null
+DiscountActive=[]
+ExpensivePercent=null
+DiscountGroupGroup=null
 ThresholdAmount=null
 ThresholdPercent=null
-ExpensivePercent=null
-DiscountActive=[]
-Strategy=EXCEL
-ReceiptHeaderMessage=Welcome to the candy shop
-ReceiptFooterMessage=Please come again!
