--- a/src/Files/config.properties
+++ b/src/Files/config.properties
@@ -1,8 +1,9 @@
-ReceiptActive=[]
+#Sat Dec 14 15:31:40 CET 2019
+ReceiptActive=[HEADERMESSAGE, HEADERDATE]
 DiscountGroupPercent=null
 Strategy=EXCEL
 ReceiptFooterMessage=null
-ReceiptHeaderMessage=null
+ReceiptHeaderMessage=Test
 DiscountActive=[]
 ExpensivePercent=null
 DiscountGroupGroup=null
