--- a/src/files/config.properties
+++ b/src/files/config.properties
@@ -1,9 +1,9 @@
-#Sat Dec 14 15:31:40 CET 2019
-ReceiptActive=[HEADERMESSAGE, HEADERDATE]
+#Mon Dec 23 10:20:58 CET 2019
+ReceiptActive=[]
 DiscountGroupPercent=null
-Strategy=EXCEL
+Strategy=TEXTFILE
 ReceiptFooterMessage=null
-ReceiptHeaderMessage=Test
+ReceiptHeaderMessage=null
 DiscountActive=[]
 ExpensivePercent=null
 DiscountGroupGroup=null
